<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/consumableImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/donkeys_logo" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/consumableName"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consumable_name_text" />

            <TextView
                android:id="@+id/consumablePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_default_text" />

            <TextView
                android:textColor="@color/warn"
                android:id="@+id/avaibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_text" />

            <Button
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:textColor="@color/primary"
                android:background="@android:color/transparent"
                android:id="@+id/addToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_shopping_text" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/removeFromCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/remove_item_text"
                android:textColor="@color/primary"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>